--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,19 @@
   --color-sidebar-ring: var(--sidebar-ring);
 }
 
+@theme {
+  --animate-fade-in: fade-in 0.2s linear 1;
+
+  @keyframes fade-in {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+}
+
 :root {
   --radius: 0.65rem;
   --background: oklch(1 0 0);
