--- a/src/index.css
+++ b/src/index.css
@@ -146,4 +146,13 @@
   button {
     @apply cursor-pointer;
   }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Edge */
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE, Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
